# bolttech-prac

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  README.md  eda_report.py  fill_unknown.py  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
data/preprocessed_data/: claim_approval_feature_dataset.xlsx  claim_approval_feature_dataset_EDA.md  claim_approval_feature_dataset_EDA_v2.md  claim_approval_feature_dataset_v2.xlsx
docs/: feature_importance.md  hyperparameter_importance.md  mlflow.md  optuna.md
frontend/: index.html  package.json
frontend/public/: dashboard_data.json
frontend/src/: App.jsx  styles.css
instructions/: ml_model_optimization_with_mlflow_optuna_prompt.md
model-dashboard/: README.md  package-lock.json  vite.config.js
model-dashboard/src/: App.jsx
models/: best_model.joblib  best_model_meta.json
notebooks/: model_experiment_summary.ipynb  preprocessing.ipynb
prediction-app/: README.md  index.html  package-lock.json  package.json  vite.config.js
prediction-app/public/: feature_config.json
prediction-app/src/: App.jsx  api.js  styles.css
reports/: dashboard_data.json  final_model_report.md  model_comparison.csv  threshold_analysis.csv
src/: config.py  dashboard_api.py  db.py  explainability.py  llm_explain.py  load_dataset_to_db.py  model_factory.py  optimize_optuna.py  prediction_service_api.py  run_pipeline.py  serve.py  serve_api.py  threshold_tuning.py
src/ml/: __init__.py  data.py  evaluate.py  explainability.py  mlflow_tracking.py  model_factory.py  (+4 more)
tests/: test_smoke.py
(+17 files in other folders)
